Attempted fix of PDF on mobile

--- a/src/styles/components/_addux-pdf.scss
+++ b/src/styles/components/_addux-pdf.scss
@@ -26,3 +26,8 @@
         font-size:12px;
     }
 }
+
+.html2canvas-container{
+    width:3000px !important;
+    height:3000px !important;
+}
